@@ -44,23 +44,4 @@ jobs:
       run: |
         make type-check
 
-  test-legacy:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        python-version: ['3.6', '3.7']
-
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        make requirements
-    - name: Test
-      run: |
-          make test
-
 # vim: sw=2
