@@ -1,3 +1,6 @@
+next:
+	- Support for python 3.6, 3.7 dropped.
+
 2.2.0:
 	- Typing fixes.
 		https://github.com/jsbronder/asyncio-dgram/issues/16
